--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kozlov Alexander | resume</title>
+    <link href='https://fonts.googleapis.com/css?family=Andika&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,124 +18,160 @@
 
 <body>
     <header>
-        <div class="container">
-            <a class="logo" href="index.html">Александр Козлов</a>
-            <ul class="list-unstyled">
-                <li><a href="#">Резюме</a></li>
-            </ul>
+        <div class="header container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <span class='logo'><a  href="index.html">Alexander Kozlov</a></span>
+                </div>
+                <div class="col-sm-6">
+                    <span class='resume-title'>Resume</span>
+                </div>
+            </div>
         </div>
     </header>
+
+
     <section class="media">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
                     <img src="img/photo.jpg" alt="Kozlov Alexander" class="photo">
                 </div>
-                <div class="col-sm-3">
-                    <ul class="media-list">
-                        <li><a href="#"><i class="fa fa-github-square"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
+                <div class="col-sm-9">
+                    <ul class="list-inline media-list">
+                        <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
+                        <li><a class='twitter-ico' href="https://twitter.com/trefa" target='_blank'><i class="fa fa-twitter"></i></a></li>
+                        <li><a class='email-ico' href="mailto:itrefak@gmail.com"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <a href="#" class="dl-button">Скачать как PDF</a>
-        </div>
-    </section>
+            <!-- end row -->
+            <div class="row">
+                <div class="pdf-button">
+                    <a href="#" class="dl-button">Download as PDF</a>
+                </div>
+            </div>
+        </div><!-- end container -->
+    </section> <!-- end media -->
+
+
+
     <section class="resume">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-3">Имя</div>
-                <div class="col-sm-9">Козлов Александр</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Локация</div>
-                <div class="col-sm-9">Россия. Крым. Армянск/Cевастополь (готов к переезду).</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Образование</div>
-                <div class="col-sm-9">Высшее. Херсонский национальный технический университет. Кафедра автоматизации технических процессов и производств.
+            <section class="resume-block personal-data">
+                <h2>Personal data</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">Adress:</div>
+                    <div class="col-sm-9">Russa. Crimea. Armyansk / Sevastopol (ready to move)</div>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Моя цель</div>
-                <div class="col-sm-9">Начать карьеру в IT как junior Javascript разработчик.</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Общая информация</div>
-                <div class="col-sm-9">
-                    Глубокий уровень знания JavaScript. Понимаю принципы  проектирования и разработки качественного ПО. Всегда стараюсь писать модульный, хорошо читаемый и главное тестируемый код. Знаю силу TDD и стараюсь везде ее применять. Постоянно развиваюсь и учусь, обязательно пробую все ручками.
-                    Как я совершенствую свои знания:
-                    Читаю много профильной литературы и прохожу курсы, вот <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">ссылка</a> на мою книжную полку.
-                    Изучаю код интересных проектов на Github.
-                    Прохожу курсы по Computer Science из этого <a href="https://github.com/open-source-society/computer-science" target='_blank'>списка</a>.
-                    Так же улучшаю свои математические знания на <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>.
+                <div class="row">
+                    <div class="col-sm-3"><span>Email:</span></div>
+                    <div class="col-sm-9"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-sm-3">Phone:</div>
+                    <div class="col-sm-9">+7 978 848 04 11</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Twitter:</div>
+                    <div class="col-sm-9"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Skype:</div>
+                    <div class="col-sm-9"><a href="skype:itrefa?call">itrefa</a></div>
+                </div>
+            </section> <!-- end resume-block -->
 
-            <div class="row">
-                <div class="col-sm-3">Отлично владею</div>
-                <div class="col-sm-9">Javascript, HTML, CSS(SASS)</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Пишу тесты на</div>
-                <div class="col-sm-9">Jasmine, Mocha</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">API / Frameworks</div>
-                <div class="col-sm-9">Chrome APIs, Bootstrap</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Работал с</div>
-                <div class="col-sm-9">AJAX, Websocket, JSONP</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Немного опыта с</div>
-                <div class="col-sm-9">С, mysql, apache, Wordpress, Opencart</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Инструменты</div>
-                <div class="col-sm-9">git, Gulp, Grunt, Webstorm, Photoshop</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">OS</div>
-                <div class="col-sm-9">работаю в Linux(advanced)</div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">Языки</div>
-                <div class="col-sm-9">English C1, Русский, Украинский.</div>
-            </div>
-        </div> <!-- end container -->
-    </section> <!-- end resume -->
+            <section class="resume-block">
+                <h2>Education</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">Sept 2013 - June 2014</div>
+                    <div class="col-sm-9">Specialist in Automated Management of Technological Processes. Kherson National Technical University.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Sept 2010 - June 2013</div>
+                    <div class="col-sm-9">Bachelor in Automated Management of Technological Processes. Kherson National Technical University.</div>
+                </div>
+            </section>
 
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3"><a href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></div>
-                <div class="col-sm-9">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
-            </div>
+
+            <section class="resume-block">
+                <h2>About me</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">Objective</div>
+                    <div class="left-border col-sm-9">Start the carreer as a junior Javascript developer</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Summary</div>
+                    <div class="left-border col-sm-9">
+                        Strong knowledge of Javascrip. Understand key principles and technics in software development.Понимаю принципы проектирования и разработки качественного ПО. Всегда стараюсь писать модульный, хорошо читаемый и главное тестируемый код. Знаю силу TDD и стараюсь везде ее применять. Постоянно развиваюсь и учусь, обязательно пробую все ручками. Как я совершенствую свои знания: Читаю много профильной литературы и прохожу курсы, вот <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">ссылка</a> на мою книжную полку. Изучаю код интересных проектов на Github. Прохожу курсы по Computer Science из этого <a href="https://github.com/open-source-society/computer-science" target='_blank'>списка</a>. Так же улучшаю свои математические знания на <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>.
+                    </div>
+                </div>
+            </section>
+            <section class="resume-block">
+                <h2>Computer skills</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">Proficient in</div>
+                    <div class="col-sm-9">Javascript, HTML, CSS(SASS)</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Write test with</div>
+                    <div class="col-sm-9">Jasmine, Mocha</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">API / Frameworks</div>
+                    <div class="col-sm-9">Chrome APIs, Bootstrap</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Experience with</div>
+                    <div class="col-sm-9">AJAX, Websocket, JSONP</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Some experience with</div>
+                    <div class="col-sm-9">С, mysql, apache, Wordpress, Opencart</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Tools</div>
+                    <div class="col-sm-9">git, Gulp, Grunt, Webstorm, Photoshop</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">OS</div>
+                    <div class="col-sm-9">Linux (advanced user)</div>
+                </div>
+            </section>
+
+            <section class="resume-block">
+                <h2>Languages</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3">English</div>
+                    <div class="col-sm-9">C1</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3">Russian</div>
+                    <div class="col-sm-9">Native</div>
+                </div>
+            </section>
+            <!-- end resume-block -->
+            <section class="resume-block">
+                <h2>Примеры кода</h2>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-3"><a href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></div>
+                    <div class="col-sm-9">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
+                </div>
+            </section>
         </div>
+        <!-- end container -->
     </section>
-
-
+    <!-- end resume -->
     <!-- Scripts go down here -->
-    <script src="js/app.js"></script>
 </body>
 
 </html>
