--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
         <div class="header container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-8">
                     <span class='logo'><a  href="index.html">Alexander Kozlov</a></span>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <span class='resume-title'>Resume</span>
                 </div>
             </div>
@@ -62,111 +62,124 @@
                 <h2>Personal data</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-3">Adress:</div>
-                    <div class="col-sm-9">Russa. Crimea. Armyansk / Sevastopol (ready to move)</div>
+                    <div class="text-right col-xs-4"><span>Adress:</span></div>
+                    <div class="col-xs-8">Russa. Crimea. Armyansk / Sevastopol (ready to move)</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><span>Email:</span></div>
-                    <div class="col-sm-9"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
+                    <div class="text-right col-xs-4"><span><span>Email:</span></span></div>
+                    <div class="col-xs-8"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Phone:</div>
-                    <div class="col-sm-9">+7 978 848 04 11</div>
+                    <div class="text-right col-xs-4"><span>Phone:</span></div>
+                    <div class="col-xs-8">+7 978 848 04 11</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Twitter:</div>
-                    <div class="col-sm-9"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
+                    <div class="text-right col-xs-4"><span>Twitter:</span></div>
+                    <div class="col-xs-8"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Skype:</div>
-                    <div class="col-sm-9"><a href="skype:itrefa?call">itrefa</a></div>
+                    <div class="text-right col-xs-4"><span>Skype:</span></div>
+                    <div class="col-xs-8"><a href="skype:itrefa?call">itrefa</a></div>
                 </div>
             </section> <!-- end resume-block -->
 
-            <section class="resume-block">
+            <section class="resume-block education">
                 <h2>Education</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-3">Sept 2013 - June 2014</div>
-                    <div class="col-sm-9">Specialist in Automated Management of Technological Processes. Kherson National Technical University.
+                    <div class="text-right col-sm-3"><span>Sept 2013 - June 2014</span></div>
+                    <div class="left-border col-sm-9">
+                        <span>
+                            Specialist in Automated Management of Technological Processes.
+                        </span>
+                        <br>
+                        <p>Kherson National Technical University.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Sept 2010 - June 2013</div>
-                    <div class="col-sm-9">Bachelor in Automated Management of Technological Processes. Kherson National Technical University.</div>
+                    <div class="text-right col-sm-3"><span>Sept 2010 - June 2013</span></div>
+                    <div class="left-border col-sm-9">
+                    <span>Bachelor in Automated Management of Technological Processes.</span>
+                    <br>
+                    <p>Kherson National Technical University.</p>
+                    </div>
                 </div>
             </section>
 
 
 
-            <section class="resume-block">
+            <section class="resume-block about-me">
                 <h2>About me</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-3">Objective</div>
+                    <div class="text-right col-sm-3"><span>Objective</span></div>
                     <div class="left-border col-sm-9">Start the carreer as a junior Javascript developer</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Summary</div>
+                    <div class="text-right col-sm-3"><span>Summary</span></div>
                     <div class="left-border col-sm-9">
                         Strong knowledge of Javascrip. Understand key principles and technics in software development.Понимаю принципы проектирования и разработки качественного ПО. Всегда стараюсь писать модульный, хорошо читаемый и главное тестируемый код. Знаю силу TDD и стараюсь везде ее применять. Постоянно развиваюсь и учусь, обязательно пробую все ручками. Как я совершенствую свои знания: Читаю много профильной литературы и прохожу курсы, вот <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">ссылка</a> на мою книжную полку. Изучаю код интересных проектов на Github. Прохожу курсы по Computer Science из этого <a href="https://github.com/open-source-society/computer-science" target='_blank'>списка</a>. Так же улучшаю свои математические знания на <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>.
                     </div>
                 </div>
             </section>
-            <section class="resume-block">
+
+
+            <section class="resume-block computer-skills">
                 <h2>Computer skills</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-3">Proficient in</div>
-                    <div class="col-sm-9">Javascript, HTML, CSS(SASS)</div>
+                    <div class="text-right col-xs-3"><span>Proficient in</span></div>
+                    <div class="col-xs-9">Javascript, HTML, CSS(SASS)</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Write test with</div>
-                    <div class="col-sm-9">Jasmine, Mocha</div>
+                    <div class="text-right col-xs-3"><span>Write test with</span></div>
+                    <div class="col-xs-9">Jasmine, Mocha</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">API / Frameworks</div>
-                    <div class="col-sm-9">Chrome APIs, Bootstrap</div>
+                    <div class="text-right col-xs-3"><span>API / Frameworks</span></div>
+                    <div class="col-xs-9">Chrome APIs, Bootstrap</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Experience with</div>
-                    <div class="col-sm-9">AJAX, Websocket, JSONP</div>
+                    <div class="text-right col-xs-3"><span>Experience with</span></div>
+                    <div class="col-xs-9">AJAX, Websocket, JSONP</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Some experience with</div>
-                    <div class="col-sm-9">С, mysql, apache, Wordpress, Opencart</div>
+                    <div class="text-right col-xs-3"><span>Some experience with</span></div>
+                    <div class="col-xs-9">С, mysql, apache, Wordpress, Opencart</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Tools</div>
-                    <div class="col-sm-9">git, Gulp, Grunt, Webstorm, Photoshop</div>
+                    <div class="text-right col-xs-3"><span>Tools</span></div>
+                    <div class="col-xs-9">git, Gulp, Grunt, Webstorm, Photoshop</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">OS</div>
-                    <div class="col-sm-9">Linux (advanced user)</div>
+                    <div class="text-right col-xs-3"><span>OS</span></div>
+                    <div class="col-xs-9">Linux (advanced user)</div>
                 </div>
             </section>
 
             <section class="resume-block">
+                <h2>Examples of my code</h2>
+                <hr>
+                <div class="row">
+                    <div class="text-right col-sm-3"><span><a href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
+                    <div class="col-sm-9">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
+                </div>
+            </section>
+
+            <section class="resume-block languages">
                 <h2>Languages</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-3">English</div>
-                    <div class="col-sm-9">C1</div>
+                    <div class="text-right col-sm-3"><span>English</span></div>
+                    <div class="col-sm-9"><span>C1</span></div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">Russian</div>
+                    <div class="text-right col-sm-3"><span>Russian</span></div>
                     <div class="col-sm-9">Native</div>
                 </div>
             </section>
             <!-- end resume-block -->
-            <section class="resume-block">
-                <h2>Примеры кода</h2>
-                <hr>
-                <div class="row">
-                    <div class="col-sm-3"><a href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></div>
-                    <div class="col-sm-9">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
-                </div>
-            </section>
+
         </div>
         <!-- end container -->
     </section>
