--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="media">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 photo-block">
                     <img src="img/photo.jpg" alt="Kozlov Alexander" class="photo">
                 </div>
                 <div class="col-sm-9">
@@ -87,8 +87,8 @@
                 <h2>Education</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>Sept 2013 - June 2014</span></div>
-                    <div class="left-border col-sm-9">
+                    <div class="text-right col-xs-3"><span>Sept 2013 - June 2014</span></div>
+                    <div class="bordered col-xs-9">
                         <span>
                             Specialist in Automated Management of Technological Processes.
                         </span>
@@ -97,8 +97,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>Sept 2010 - June 2013</span></div>
-                    <div class="left-border col-sm-9">
+                    <div class="text-right col-xs-3"><span>Sept 2010 - June 2013</span></div>
+                    <div class="bordered col-xs-9">
                     <span>Bachelor in Automated Management of Technological Processes.</span>
                     <br>
                     <p>Kherson National Technical University.</p>
@@ -112,12 +112,12 @@
                 <h2>About me</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>Objective</span></div>
-                    <div class="left-border col-sm-9">Start the carreer as a junior Javascript developer</div>
+                    <div class="text-right col-xs-3"><span>Objective</span></div>
+                    <div class="bordered col-xs-9">Start the carreer as a junior Javascript developer</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>Summary</span></div>
-                    <div class="left-border col-sm-9">
+                    <div class="text-right col-xs-3"><span>Summary</span></div>
+                    <div class="bordered col-xs-9">
                         Strong knowledge of Javascrip. Understand key principles and technics in software development.Понимаю принципы проектирования и разработки качественного ПО. Всегда стараюсь писать модульный, хорошо читаемый и главное тестируемый код. Знаю силу TDD и стараюсь везде ее применять. Постоянно развиваюсь и учусь, обязательно пробую все ручками. Как я совершенствую свои знания: Читаю много профильной литературы и прохожу курсы, вот <a href="http://www.shelfari.com/o1515589298/shelf" target="_blank">ссылка</a> на мою книжную полку. Изучаю код интересных проектов на Github. Прохожу курсы по Computer Science из этого <a href="https://github.com/open-source-society/computer-science" target='_blank'>списка</a>. Так же улучшаю свои математические знания на <a href="https://www.khanacademy.org/" target="_blank">khanacademy.org</a>.
                     </div>
                 </div>
@@ -128,32 +128,32 @@
                 <h2>Computer skills</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Proficient in</span></div>
-                    <div class="col-xs-9">Javascript, HTML, CSS(SASS)</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">Javascript, HTML, CSS(SASS)</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Write test with</span></div>
-                    <div class="col-xs-9">Jasmine, Mocha</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Write test with</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">Jasmine, Mocha</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>API / Frameworks</span></div>
-                    <div class="col-xs-9">Chrome APIs, Bootstrap</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>API / Frameworks</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">Chrome APIs, Bootstrap</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Experience with</span></div>
-                    <div class="col-xs-9">AJAX, Websocket, JSONP</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Experience with</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">AJAX, Websocket, JSONP</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Some experience with</span></div>
-                    <div class="col-xs-9">С, mysql, apache, Wordpress, Opencart</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Some experience with</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">С, mysql, apache, Wordpress, Opencart</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>Tools</span></div>
-                    <div class="col-xs-9">git, Gulp, Grunt, Webstorm, Photoshop</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">git, Gulp, Grunt, Webstorm, Photoshop</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-3"><span>OS</span></div>
-                    <div class="col-xs-9">Linux (advanced user)</div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>OS</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">Linux (advanced user)</div>
                 </div>
             </section>
 
@@ -161,8 +161,8 @@
                 <h2>Examples of my code</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span><a href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
-                    <div class="col-sm-9">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
+                    <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
+                    <div class="col-xs-9 proj-desc">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
                 </div>
             </section>
 
@@ -170,12 +170,12 @@
                 <h2>Languages</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>English</span></div>
-                    <div class="col-sm-9"><span>C1</span></div>
+                    <div class="text-right col-xs-6 col-sm-3"><span>English</span></div>
+                    <div class="col-xs-6 col-sm-9"><span>C1</span></div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-sm-3"><span>Russian</span></div>
-                    <div class="col-sm-9">Native</div>
+                    <div class="text-right col-xs-6 col-sm-3"><span>Russian</span></div>
+                    <div class="col-xs-6 col-sm-9">Native</div>
                 </div>
             </section>
             <!-- end resume-block -->
