--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                     <div class="col-xs-8">+7 978 848 04 11</div>
                 </div>
                 <div class="row">
+                    <div class="text-right col-xs-4"><span>Github:</span></div>
+                    <div class="col-xs-8"><a target='_blank' href="https://github.com/thohoh">thohoh</a></div>
+                </div>
+                <div class="row">
                     <div class="text-right col-xs-4"><span>Twitter:</span></div>
                     <div class="col-xs-8"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
                 </div>
@@ -162,7 +166,7 @@
                 <hr>
                 <div class="row">
                     <div class="text-right col-xs-3 proj-header"><span><a class='proj-name' href="https://github.com/thohoh/sight-keeper" target='_blank'>Sight keeper</a></span></div>
-                    <div class="col-xs-9 proj-desc">Это расширение для Google Chrome , спасает глаза от переутомления. Проект разрабатывается при помощи технологий SASS, модули CommonJS(Browserify), unit-тесты Mocha(Chai, Sinon)+phantomjs, таски Gulp.js.</div>
+                    <div class="col-xs-9 proj-desc">Extension for Google Chrome, reminds user about rest in a smart way. Technologies used in the project : styles SASS, CommonJS module system (Browserify), unit-tests Mocha(Chai, Sinon)+phantomjs, task-runner Gulp.js.</div>
                 </div>
             </section>
 
